--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "daisyui": "^2.51.5",
     "eslint": "8.36.0",
     "eslint-config-next": "^13.2.4",
     "next": "^13.2.4",
@@ -22,6 +23,9 @@
     "typescript": "5.0.2"
   },
   "devDependencies": {
-    "tailwindcss": "^3.2.7"
+    "@tailwindcss/typography": "^0.5.9",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1"
   }
 }
